@@ -258,6 +258,33 @@
         </widget>
         <widget class="QGroupBox">
             <property name="name">
+                <cstring>groupBox3</cstring>
+            </property>
+            <property name="title">
+                <string>Playlist Options</string>
+            </property>
+            <vbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>kcfg_RelativePlaylist</cstring>
+                    </property>
+                    <property name="text">
+                        <string>&amp;Manually saved playlists use relative path</string>
+                    </property>
+                    <property name="toolTip" stdset="0">
+                        <string>If checked, amaroK uses a relative path for the tracks of manually saved playlists</string>
+                    </property>
+                    <property name="whatsThis" stdset="0">
+                        <string>If checked, amaroK uses a relative path for the tracks of manually saved playlists</string>
+                    </property>
+                </widget>
+            </vbox>
+        </widget>
+        <widget class="QGroupBox">
+            <property name="name">
                 <cstring>groupBox5</cstring>
             </property>
             <property name="title">
