@@ -87,7 +87,7 @@ class Playlist : private KListView, public EngineObserver
         /// called during initialisation
         void restoreSession();
 
-        void saveM3U( const QString& ) const;
+        void saveM3U( const QString&, bool relativePath = FALSE ) const;
         void saveXML( const QString& );
 
         void burnPlaylist( int projectType=-1 );
